tests/baselines/reference/classStaticBlock7.errors.txt
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(3,9): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(4,9): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts(5,9): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/classes/classStaticBlock/classStaticBlock7.ts (3 errors) ====
    class C {
        static {
            await 1;
            ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
            yield 1;
            ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
            return 1;
            ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.
        }
    }
    